2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/ptex.am: Distribute ptex_version.h.

2012-07-17  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: fix a bug in
	@<Scan an alphabetic character code into |cur_val|@>

2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pbibtex.ch, pdvitype.ch, ppltotf.ch, ptftopl.ch:
	Adapt to the use my_name.

2012-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexextra.c: Must #define DLLPROC before reading ptexd.h.

2012-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexextra.c [W32TeX]: #define DLLPROC for ptex.dll.

2012-05-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdvitype.test, sample.test: Cope with spaces in paths returned
	by kpsewhich.

2012-05-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptex-base.ch: Restore the 'unnecessary and seemingly wrong'
	changes; they are required to show the error context.
	* ptrip/ptrip.diffs: Adapted.

2012-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptex-base.ch (pTeX_version_string): Version 3.3.
	* ptrip/ptrip.diffs: Adapted.

2012-03-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptex-base.ch: remove unnecessary and seemingly wrong changes

2012-03-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptex-base.ch: fix a long-remained bug in show_context.

2012-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* pbibtex.ch, ppltotf.ch: Use ustringcast(buffer).
	* ptex-base.ch: Use ustringcast for buffer and str_pool.

2012-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptftopl.ch: Adapt to missing space added in ../tftopl.ch.

2012-01-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdvitype.ch: Remove an unnecessary change in previous.

2012-01-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* kanji.h, pdvitype.ch: enable -kanji option in pdvitype.
	(patch from TANAKA Takuji-san).

2011-12-19  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
